[package]
name = "stablediffusion-wgpu"
version = "0.1.0"
description = "Stable diffusion burn with wgpu"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/stablediffusion-wgpu"
repository = "https://github.com/neka-nat/stable-diffusion-burn-wgpu"
homepage = "https://github.com/neka-nat/stable-diffusion-burn-wgpu"
keywords = ["stable-diffusion", "wgpu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = "0.11.1"
burn-ndarray = "0.11.1"
burn-autodiff = "0.11.1"
burn-wgpu = "0.11.1"
serde = {version = "1.0.171", features = ["std", "derive"]}
npy = "0.4.0"
num-traits = "0.2.15"
rust_tokenizers = "8.1.0"
regex = "1.9.1"
image = "0.24.6"
cfg-if = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
directories = "5.0.1"
indicatif = "0.17.7"
tokio = { version = "1.35", features = ["full"] }
